# image-filter

./: .gitignore  README.md
cpp/: CMakeLists.txt  test_opencv.cpp
cpp/include/filters/: cartoon.hpp  edge_detection.hpp  gaussian_blur.hpp  hdr_tone_mapping.hpp  vintage.hpp
cpp/include/utils/: on_screen_display.hpp
cpp/src/: main.cpp
cpp/src/filters/: cartoon.cpp  edge_detection.cpp  gaussian_blur.cpp  hdr_tone_mapping.cpp  vintage.cpp
cpp/src/utils/: on_screen_display.cpp
